--- a/GameStore.UnitTests/GameStore.UnitTests.csproj
+++ b/GameStore.UnitTests/GameStore.UnitTests.csproj
@@ -89,9 +89,11 @@
   <ItemGroup>
     <Compile Include="App_Start\NinjectWebCommon.cs" />
     <Compile Include="CartTests.cs" />
+    <Compile Include="FileTests.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AdminTests.cs" />
+    <Compile Include="AdminSecurityTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
